Added verification of debug symbol stripping

--- a/examples/compiler_mitigation/Makefile
+++ b/examples/compiler_mitigation/Makefile
@@ -3,7 +3,8 @@
 .phony: secure_gcc, insecure_gcc, verify
 
 insecure_gcc: program.c
-	gcc program.c -o program
+	gcc -g program.c -o program
 
 verify: program
-		hardening-check/hardening-check program
+	objdump --syms program
+	hardening-check/hardening-check program
