Working on compile testing

--- a/examples/compiler_mitigation/Makefile
+++ b/examples/compiler_mitigation/Makefile
@@ -1,6 +1,10 @@
 
 
-.phony: secure_gcc, insecure_gcc, verify
+.phony: secure_gcc, insecure_gcc, verify, clean
+
+secure_gcc: program.c
+	gcc -fstack-protector-strong -D_FORTIFY_SOURCE=2 -pie -fPIE -Wl,-z,relro,-z,now program.c -o program
+	strip program
 
 insecure_gcc: program.c
 	gcc -g program.c -o program
@@ -8,3 +12,7 @@ insecure_gcc: program.c
 verify: program
 	objdump --syms program
 	hardening-check/hardening-check program
+
+
+clean:
+	rm *.o program
