proper vale base check

--- a/.vale.ini
+++ b/.vale.ini
@@ -1,5 +1,5 @@
 	StylesPath = vale_styles
-	MinAlertLevel = suggestion
+	MinAlertLevel = error
 
 	[*]
 	BasedOnStyles = vale, write-good, BuildingComputerSecurity
